# anon-csv-cli

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: release.yml  rust.yml
ci/: script.sh
etc/: developer.Dockerfile
src/: main.rs  options.rs
src/soon_to_be_lib/: anon.rs  mod.rs  spec.rs
tests/: stateless-journey.sh
tests/fixtures/: addresses-privatized-with-header.csv  addresses-privatized.csv
tests/snapshots/: failure-duplicate-spec  failure-input-file-column-out-of-range  failure-missing-arguments  failure-missing-input-file  success-all-specs  success-column-in-range-center-column  success-column-in-range-first-column  success-column-in-range-last-column  success-column-in-range-to-consecutive-columns  success-column-in-range-two-non-consecutive-columns  success-no-private-data-with-header  success-noop-from-stdin
