[package]
name = "anon-csv-cli"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
failure = "0.1.1"
failure-tools = "4.0.2"
structopt = "0.2.14"
csv = "1.0.5"
fake = "1.2.2"
strum = "0.14.0"
strum_macros = "0.14.0"

[[bin]]
name="anon-csv-cli"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true
