[package]
name = "anon-csv-cli"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = true
edition = "2018"
documentation = "https://github.com/Byron-TW/anon-csv-cli"
repository = "https://github.com/Byron-TW/anon-csv-cli"
description = "A tool to anonymise CSV files, providing various options to substitute real data with plausable fake data."
categories = ["Text processing", "science"]
keywords = ["csv", "anon", "anonymization"]
license = "MIT"

[dependencies]
failure = "0.1.1"
failure-tools = "4.0.2"
structopt = "0.2.14"
csv = "1.0.5"
fake = "1.2.2"
strum = "0.14.0"
strum_macros = "0.14.0"

[[bin]]
name="anon-csv"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true
