[package]
name = "anon-csv-cli"
version = "1.0.4-alpha.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = true
edition = "2018"
include = ["src/**/*", "Cargo.*"]
repository = "https://github.com/Byron-TW/anon-csv-cli"
description = "A tool to anonymise CSV files, providing various options to substitute real data with plausable fake data."
categories = ["text-processing", "science"]
keywords = ["csv", "anon", "anonymization"]
readme = "README.md"
license = "MIT"

[dependencies]
failure = "0.1.6"
failure-tools = "4.0.3"
structopt = "0.3.9"
csv = "1.1.3"
fake = "1.3.0"
strum = "0.18.0"
strum_macros = "0.17.1"

[[bin]]
name="anon-csv"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true
